--- a/app/src/main/res/layout/item_news_headlines.xml
+++ b/app/src/main/res/layout/item_news_headlines.xml
@@ -5,19 +5,25 @@
     android:layout_width="350dp"
     app:cardCornerRadius="15dp"
     android:layout_marginEnd="16dp"
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_height="200dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:background="?android:attr/selectableItemBackground"
+        android:focusable="true">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/iv_headline_news"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
             android:adjustViewBounds="true"
-            android:tint="#95000000"
+            android:scaleType="centerCrop"
+            android:tint="#88000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +31,7 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/tv_author"
+            android:id="@+id/tv_headline_author"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -38,30 +44,31 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_title"
+            android:id="@+id/tv_headline_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:maxLines="3"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/textView4"
-            app:layout_constraintEnd_toEndOf="@+id/tv_author"
-            app:layout_constraintStart_toStartOf="@+id/tv_author"
-            app:layout_constraintTop_toBottomOf="@+id/tv_author"
+            app:layout_constraintBottom_toTopOf="@+id/tv_headline_date"
+            app:layout_constraintEnd_toEndOf="@+id/tv_headline_author"
+            app:layout_constraintStart_toStartOf="@+id/tv_headline_author"
+            app:layout_constraintTop_toBottomOf="@+id/tv_headline_author"
             tools:text="Apa Itu Tapera yang Buat Gaji Dipotong 2,5 Persen Tiap Tanggal 10? - CNN Indonesia" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tv_headline_date"
             android:layout_width="0dp"
-            android:layout_height="15dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:textColor="#DDF2F2F2"
             android:maxLines="3"
             android:text="12-12-2022"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView"
-            app:layout_constraintEnd_toEndOf="@+id/tv_title"
-            app:layout_constraintStart_toStartOf="@+id/tv_title" />
+            android:textColor="#DDF2F2F2"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_headline_news"
+            app:layout_constraintEnd_toEndOf="@+id/tv_headline_title"
+            app:layout_constraintStart_toStartOf="@+id/tv_headline_title" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
