--- a/app/src/main/res/layout/item_news_shimmer.xml
+++ b/app/src/main/res/layout/item_news_shimmer.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:clickable="true"
-    android:focusable="true"
-    android:background="?android:attr/selectableItemBackground"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
@@ -14,6 +10,7 @@
         android:layout_height="120dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
+        android:background="@color/shimmerColor"
         app:cardCornerRadius="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,33 +20,33 @@
             android:id="@+id/iv_news"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:background="@color/shimmerColor"
+            android:scaleType="centerCrop" />
     </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tv_news_title"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="65dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@color/shimmerColor"
         android:maxLines="3"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardView"
-        app:layout_constraintTop_toTopOf="@+id/cardView"
-        tools:text="Tentara Mesir Meninggal dalam Baku Tembak dengan Militer Israel di Rafah - Bisniscom" />
+        app:layout_constraintTop_toTopOf="@+id/cardView" />
 
     <TextView
         android:id="@+id/tv_news_description"
-        android:textSize="12sp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColor="#81000000"
-        android:maxLines="2"
         android:layout_marginTop="8dp"
-        tools:text="Kementerian Kebudayaan, Olahraga, dan Pariwisata Republik Korea (Menteri: Yu In Chon) bersama Korea Creative Content Agency (KOCCA President CEO: Jo Hyeon Rae) akan menggelar acara ‘Ji Chang …"
+        android:background="@color/shimmerColor"
+        android:maxLines="2"
+        android:textColor="#81000000"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/tv_news_title"
         app:layout_constraintStart_toStartOf="@+id/tv_news_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_news_title" />
@@ -58,21 +55,23 @@
         android:id="@+id/tv_news_author"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/shimmerColor"
         android:maxLines="1"
         android:textColor="#81000000"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintEnd_toStartOf="@id/tv_news_date"
         app:layout_constraintStart_toStartOf="@+id/tv_news_description"
-        tools:text="By Alland Rifqy Putra" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_news_description" />
 
     <TextView
         android:id="@+id/tv_news_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@color/shimmerColor"
         android:textColor="#81000000"
         android:textSize="12sp"
-        tools:text= "12/12/2022"
         app:layout_constraintEnd_toEndOf="@+id/tv_news_description"
         app:layout_constraintStart_toEndOf="@+id/tv_news_author"
         app:layout_constraintTop_toTopOf="@+id/tv_news_author" />
