--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,11 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
     <style name="Base.Theme.NewsAppRakamin" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:windowBackground">@color/white</item>
     </style>
 
     <style name="Theme.NewsAppRakamin" parent="Base.Theme.NewsAppRakamin" />
+
+    <style name="DefaultAppBarLayout" parent="Widget.MaterialComponents.AppBarLayout.Surface">
+        <item name="android:color">@android:color/black</item>
+    </style>
 </resources>
